better css overflow fix

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -1,16 +1,20 @@
 body {
-	margin: 0 20px;
+	margin: 0 0;
 	font-family: 'pt mono';
-	background-image: url(../img/plan.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	overflow: hidden;
 }
 a {
 	text-decoration: none;
 }
 .all {
 	overflow: hidden;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	padding: 0 20px;
+	min-width: 1560px;
+	background-image: url(../img/plan.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 .title {
 	font-family: sans-serif;
